# catties

./: Cargo.toml  README.md  build.rs
assets/: config.yaml
assets/tiles/: tiles.aseprite  tiles.yaml
crates/map/: Cargo.toml
crates/map/src/: lib.rs
fmod/: .gitignore
fmod/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
fmod/Metadata/Asset/: {6dd31003-5a1a-482c-be25-25577f4f892d}.xml
fmod/Metadata/AudioFile/: {a98bdc40-4425-4b5a-af0f-7a6f6f63b6a4}.xml  {d3f58561-9393-48dd-849d-f2776bf6a6ab}.xml  {e13f75d8-8261-4ebe-b1c5-6c2269852eb6}.xml
fmod/Metadata/Bank/: {d2bca557-b1b3-4d5c-ac1e-3d77563796dd}.xml
fmod/Metadata/BankFolder/: {1e0cdd71-3636-4450-b316-86e0ea5470f0}.xml
fmod/Metadata/EffectPresetFolder/: {acd4424f-62a3-4ff5-bce8-3ca0d1116791}.xml
fmod/Metadata/EncodingSetting/: {e54b7a91-f802-414b-ba8f-887b03da4e24}.xml
fmod/Metadata/Event/: {9aebb6ee-a54e-4e52-a02f-96319a3f431d}.xml
fmod/Metadata/EventFolder/: {b30ad96a-17b5-4361-a787-038d5132b0d2}.xml
fmod/Metadata/ParameterPresetFolder/: {4350fe73-1fdd-40e0-bd5e-b9b251236afb}.xml
fmod/Metadata/Platform/: {181fac2f-361d-43b0-b510-7c8b9e220623}.xml
fmod/Metadata/ProfilerFolder/: {af1734d9-51d9-4028-a96b-f6346c68d292}.xml
fmod/Metadata/Return/: {1cb38ab7-691f-4a8b-9b05-660fb295fe34}.xml
fmod/Metadata/SandboxFolder/: {78b6cc6d-3bb5-4e02-b497-2dd75b79ae1c}.xml
fmod/Metadata/SnapshotGroup/: {44b1cf58-70bf-46d2-98b4-f8452ca4adee}.xml
src/: config.rs  main.rs  map.rs  sound.rs
