[workspace]
resolver = "2"
members = [
    "crates/map"
]

[workspace.dependencies]
std_utils = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[package]
name = "isometric_test"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
std_utils.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
map = { path = "crates/map" }
sdl2 = { version = "0.37.0", features = ["ttf", "image"] }

[dependencies.fmod-oxide]
git = "https://github.com/melody-rs/fmod-oxide"
branch = "main"
