[package]
name = "isometric_test"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
sdl2 = { version = "0.37.0", features = ["ttf", "image"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
std_utils = "1.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.fmod-oxide]
git = "https://github.com/melody-rs/fmod-oxide"
branch = "main"
